k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crypto-app
  labels:
    name: crypto-app
