k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: crypto-app
  labels:
    app: analyzer
spec:
  type: ClusterIP
  selector:
    app: analyzer
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
